--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <a href="https://www.whatsapp.com/">
-        <img src="/assets/whaLogo.png" alt="whaLogo" class="logo"
+        <img src="./assets/whaLogo.png" alt="whaLogo" class="logo"
       /></a>
       <nav>
         <div>
@@ -270,7 +270,7 @@
                 href="https://play.google.com/store/apps/details?id=com.whatsapp&fbclid=IwAR0PpKE_1z74sc8Q4kxnKQzFODOLmtRmNymvo8Bz6ZJOg5djNQDMvdHSt2c"
                 target="_blank"
                 ><img
-                  src="/assets/googlePlay.png"
+                  src="./assets/googlePlay.png"
                   alt="Google Playstore Logo"
                   class="google-img"
               /></a>
@@ -286,7 +286,7 @@
                 href="https://apps.apple.com/us/app/whatsapp-messenger/id310633997?fbclid=IwAR30kILqJposAMfPq2JiGQ00o5NwVDc3jvu86wtcmAwzPNCTJXLZaooUpVk"
                 target="_blank"
                 ><img
-                  src="/assets/DRlZi0ybQQP.svg"
+                  src="./assets/DRlZi0ybQQP.svg"
                   alt="Apple Store Logo"
                   class="apple-img"
               /></a>
@@ -377,7 +377,7 @@
           </div>
           <div class="poze">
             <div>
-              <img src="/assets/poza0.png" alt="poza0" />
+              <img src="./assets/poza0.png" alt="poza0" />
               <h3>
                 Message
                 <br />
@@ -399,7 +399,7 @@
               </a>
             </div>
             <div>
-              <img src="/assets/poza1.png" alt="poza1" />
+              <img src="./assets/poza1.png" alt="poza1" />
               <h3>
                 Stay <br />
                 connected
@@ -420,7 +420,7 @@
               </a>
             </div>
             <div>
-              <img src="/assets/poza2.png" alt="poza2" />
+              <img src="./assets/poza2.png" alt="poza2" />
               <h3>
                 Build<br />
                 community
@@ -440,7 +440,7 @@
               ></a>
             </div>
             <div>
-              <img src="/assets/poza3.png" alt="poza3" />
+              <img src="./assets/poza3.png" alt="poza3" />
               <h3>
                 Express<br />
                 yourself
@@ -462,7 +462,7 @@
               ></a>
             </div>
             <div>
-              <img src="/assets/poza4.png" alt="poza4" />
+              <img src="./assets/poza4.png" alt="poza4" />
               <h3>
                 WhatsApp <br />
                 business
@@ -489,7 +489,7 @@
           <upper-section>
             <div class="left-footer">
               <a href="https://www.whatsapp.com/">
-                <img src="/assets/whaLogoWht.png" alt="whaLogoWht" />
+                <img src="./assets/whaLogoWht.png" alt="whaLogoWht" />
               </a>
               <a class="spdow" href="https://www.whatsapp.com/download"
                 >Download
